# anari-multi-threading-test

./: CMakeLists.txt  main.cpp
